<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/resultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingEnd="18sp"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/operacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingTop="50sp"
                android:paddingEnd="18sp"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="20dp"
                android:background="#D3D3D3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ac"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_topo"
                    android:onClick="ac"
                    android:padding="0dp"
                    android:text="AC"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/maisMenos"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_topo"
                    android:padding="0dp"
                    android:text="+/-"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:onClick="inverterSinal"/>

                <Button
                    android:id="@+id/porcentagem"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_topo"
                    android:onClick="porcentagem"
                    android:padding="0dp"
                    android:text="%"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/divisao"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_operadores"
                    android:onClick="operador"
                    android:padding="0dp"
                    android:text="/"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sete"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="numero"
                    android:padding="0dp"
                    android:text="7"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/oito"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="numero"
                    android:padding="0dp"
                    android:text="8"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/nove"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="numero"
                    android:padding="0dp"
                    android:text="9"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/multiplicacao"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_operadores"
                    android:onClick="operador"
                    android:padding="0dp"
                    android:text="x"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/quatro"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="numero"
                    android:padding="0dp"
                    android:text="4"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/cinco"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="numero"
                    android:padding="0dp"
                    android:text="5"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/seis"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="numero"
                    android:padding="0dp"
                    android:text="6"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/subtracao"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_operadores"
                    android:onClick="operador"
                    android:padding="0dp"
                    android:text="-"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/um"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="numero"
                    android:padding="0dp"
                    android:text="1"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/dois"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="numero"
                    android:padding="0dp"
                    android:text="2"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/tres"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="numero"
                    android:padding="0dp"
                    android:text="3"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/soma"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_operadores"
                    android:onClick="operador"
                    android:padding="0dp"
                    android:text="+"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/zero"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="2.9"
                    android:background="@drawable/button_background"
                    android:onClick="numero"
                    android:padding="0dp"
                    android:text="0"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/ponto"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:onClick="ponto"
                    android:padding="0dp"
                    android:text="."
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/igual"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background_operadores"
                    android:onClick="igual"
                    android:padding="0dp"
                    android:text="="
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
